--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<description>New OAuth2 Stack in Spring Security 5</description>
 
-	<groupId>com.baeldung</groupId>
+	<groupId>com.marcuschiu</groupId>
 	<artifactId>oauth-sso</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
