--- a/sso-authorization-server/pom.xml
+++ b/sso-authorization-server/pom.xml
@@ -2,54 +2,48 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.baeldung</groupId>
-	<artifactId>sso-authorization-server</artifactId>
-	<version>0.1.0-SNAPSHOT</version>
-	<packaging>jar</packaging>
-
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.10.RELEASE</version>
 		<relativePath />
 	</parent>
+	<groupId>com.marcuschiu</groupId>
+	<artifactId>sso-authorization-server</artifactId>
+	<version>0.1.0-SNAPSHOT</version>
+
+	<properties>
+		<java.version>11</java.version>
+		<keycloak.version>11.0.2</keycloak.version>
+		<!-- these should be updated together with Keycloak -->
+		<!-- check keycloak-dependencies-server-all effective pom -->
+		<infinispan.version>10.1.8.Final</infinispan.version>
+		<resteasy.version>3.12.1.Final</resteasy.version>
+	</properties>
 
 	<dependencies>
-
-		<!-- web -->
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
-
-		<!-- persistence -->
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-
-		<!-- Keycloak server -->
-
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-jackson2-provider</artifactId>
 			<version>${resteasy.version}</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.keycloak</groupId>
 			<artifactId>keycloak-dependencies-server-all</artifactId>
@@ -75,13 +69,11 @@
 		</dependency>
 
 		<!-- test -->
-
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
@@ -102,27 +94,5 @@
 			</plugin>
 		</plugins>
 	</build>
-
-	<developers>
-		<developer>
-			<email>eugen@baeldung.com</email>
-			<name>Eugen Paraschiv</name>
-			<url>https://github.com/eugenp</url>
-			<id>eugenp</id>
-		</developer>
-	</developers>
-
-	<properties>
-		<!-- non-dependencies -->
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>11</java.version>
-
-        <keycloak.version>11.0.2</keycloak.version>
-
-        <!-- these should be updated together with Keycloak -->
-        <!-- check keycloak-dependencies-server-all effective pom -->
-        <infinispan.version>10.1.8.Final</infinispan.version>
-        <resteasy.version>3.12.1.Final</resteasy.version>
-	</properties>
 
 </project>
