--- a/sso-resource-server/src/main/resources/application.yml
+++ b/sso-resource-server/src/main/resources/application.yml
@@ -9,5 +9,12 @@ spring:
     oauth2:
       resourceserver:
         jwt:
+          # - The resource server uses this information to validate the JWT tokens coming in
+          #   from the client applications (e.g. sso-client-app-1 and sso-client-app-2)
+          # - For this validation to work using the issuer-uri property, the authorization
+          #   server must be up and running. Otherwise, the resource server wouldn't start
           issuer-uri: http://localhost:8083/auth/realms/baeldung
-          jwk-set-uri: http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
+          # - If we need to start it independently, then we can supply the jwk-set-uri property
+          #   instead to point to the authorization server's endpoint exposing public keys
+          # - That's all we need to get our server to validate JWT tokens
+#          jwk-set-uri: http://localhost:8083/auth/realms/baeldung/protocol/openid-connect/certs
