--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<description>New OAuth2 Stack in Spring Security 5</description>
 
 	<groupId>com.marcuschiu</groupId>
-	<artifactId>oauth-sso</artifactId>
+	<artifactId>oauth-auth-and-resource-server-sso</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
