--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>sso-resource-server</module>
 		<module>sso-client-app-1</module>
 		<module>sso-client-app-2</module>
-	</modules>
+        <module>sso-client-angular</module>
+    </modules>
 
 </project>
