--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,17 @@
 	<description>New OAuth2 Stack in Spring Security 5</description>
 
 	<groupId>com.marcuschiu</groupId>
-	<artifactId>oauth-auth-and-resource-server-sso</artifactId>
+	<artifactId>oauth-oidc-auth-and-resource-server-client-sso-login</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>sso-authorization-server</module>
-		<module>sso-resource-server</module>
-		<module>sso-client-app-1</module>
-		<module>sso-client-app-2</module>
-        <module>sso-client-angular</module>
-    </modules>
+		<module>auth-server</module>
+		<module>resource-server</module>
+		<module>client-spring-1</module>
+		<module>client-spring-2</module>
+        <module>client-angular</module>
+		<module>client-spring-external-providers</module>
+	</modules>
 
 </project>
